# pointlens

./: .replit  README.md  launch.bat  launch.ps1  launch.sh  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: desktop-msi.yml
artifacts/pc-processor/: main.py
artifacts/pc-processor/.replit-artifact/: artifact.toml
artifacts/point-cloud-viewer/: package.json  vite.config.ts
artifacts/point-cloud-viewer/src/: App.tsx  index.css
artifacts/point-cloud-viewer/src-tauri/: BUILD-WINDOWS.txt  Cargo.toml  build-windows.ps1  tauri.conf.json
artifacts/point-cloud-viewer/src/components/: EmptyStateGlobe.tsx  PointCloudCanvas.tsx
artifacts/point-cloud-viewer/src/lib/: point-cloud.ts  surface.ts
artifacts/point-cloud-viewer/src/pages/: Home.tsx
attached_assets/: FHS_Glue3DVolume_1779517870341.cdp  Pasted--6-8-62-Installing-JavaScript-dependencies-pnpm-install_1779660730891.txt
src/: auto-sync.ts  sync-github.ts
